Compar: Stop invalid driver likelihood comparisons (AUS-437)